ingress/httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd-web
  template:
    metadata:
      labels:
        app: httpd-web
    spec:
      containers:
        - name: httpd-container
          image: httpd
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-deployment
spec:
  selector:
    app: httpd-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
